add simple cards for contact page

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="styleshee');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100..900&family=Work+Sans:wght@100..900&display=swap');
+
+
 
 .App {
   text-align: center;
@@ -76,6 +78,40 @@
 /* SPECIFIC STYLING FOR NAVBAR */
 
 .custom-navbar-brand {
-  font-family: 'Poppins','Arial, sans-serif';
+  font-family: 'Poppins',Arial, sans-serif;
   font-weight: bold;
 }
+
+
+/* ///////////////  CONTACT US PAGE  /////////////// */
+
+.contact-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 100px 10px;
+}
+
+/* SIMPLE CARDS */
+
+.card-container{
+  padding: 25px;
+  margin: 30px;
+  width: 280px;
+  height: 200px;
+  background-color: rgb(241, 241, 241);
+  box-shadow: 1px 10px 10px 1px rgba(0, 0, 0, 0.3);
+  border-radius: 2px;
+}
+
+.card-text {
+  font-family: 'Work Sans', sans-serif;
+  color: rgba(60, 60, 60, 0.71);
+}
+
+.card-heading{
+  font-family: sans-serif;
+  color: rgb(46, 46, 46);
+  margin-bottom: 15px;
+}
+
