--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,7 @@
 
 /* ///////////////  CONTACT US PAGE  /////////////// */
 
-.contact-container{
+.cards-container{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -114,4 +114,71 @@
   color: rgb(46, 46, 46);
   margin-bottom: 15px;
 }
+
+
+/* PARA TEXT AND MAP */
+
+/* Styles for flexbox container */
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-top: 20px;
+  margin: 70px;
+  gap: 120px;
+}
+
+/* Styles for text container */
+.text-container {
+  flex: 1;
+  margin-right: 20px;
+  background-color: rgb(0, 0, 0);
+  border-radius: 10px;
+  height: 300px;
+  box-shadow: 1px 10px 10px 1px rgba(0, 0, 0, 0.3);
+}
+
+.text-container h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  font-family: 'Poppins','Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: white
+}
+
+
+
+.text-container p {
+  font-size: 16px;
+  line-height: 1.5;
+  padding: 0px 50px;
+  font-family: 'Work Sans',sans-serif;
+  color:rgb(199, 197, 197);
+
+}
+
+.para-1{
+  margin-top: 40px;
+}
+
+/* Styles for map container */
+.map-container {
+  flex: 1;
+  background-color: rgb(243, 243, 243);
+  border-radius: 10px;
+}
+
+.map-container iframe {
+  width: 100%;
+  height: 450px;
+  border: 0;
+  padding: 20px;
+}
+
+.map-container h2{
+  color: rgb(39, 39, 39);
+  font-family: 'Poppins',sans-serif;
+  margin-top: 20px;
+}
+
 
