--- a/src/App.css
+++ b/src/App.css
@@ -132,18 +132,18 @@
 .text-container {
   flex: 1;
   margin-right: 20px;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(231, 231, 231);
   border-radius: 10px;
   height: 300px;
   box-shadow: 1px 10px 10px 1px rgba(0, 0, 0, 0.3);
 }
 
 .text-container h1 {
-  font-size: 24px;
+  font-size: 30px;
   margin-bottom: 20px;
   margin-top: 20px;
   font-family: 'Poppins','Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color: white
+  color: rgb(25, 25, 25)
 }
 
 
@@ -153,7 +153,7 @@
   line-height: 1.5;
   padding: 0px 50px;
   font-family: 'Work Sans',sans-serif;
-  color:rgb(199, 197, 197);
+  color:rgb(101, 101, 101);
 
 }
 
@@ -179,6 +179,7 @@
   color: rgb(39, 39, 39);
   font-family: 'Poppins',sans-serif;
   margin-top: 20px;
+  font-size: 25px;
 }
 
 
