--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100..900&family=Work+Sans:wght@100..900&display=swap');
 
+@tailwind base;  
+@tailwind components;  
+@tailwind utilities;
 
 
 .App {
@@ -231,4 +234,8 @@
 }
 
 
+/* ///////////////  BLOG PAGE  /////////////// */
 
+.blog-card-container{
+
+}
