--- a/src/App.css
+++ b/src/App.css
@@ -108,6 +108,7 @@
   background-color: rgb(241, 241, 241);
   box-shadow: 1px 10px 10px 1px rgba(0, 0, 0, 0.3);
   border-radius: 2px;
+  border:1px solid rgb(237, 237, 237);
 }
 
 .card-text {
@@ -213,7 +214,7 @@
 /* FEES CARDS */
 
 .fees-card-wrapper{
-  background-color: rgb(244, 244, 244);
+  background-color: rgb(248, 248, 248);
   width:350px;
   height: 340px;
   margin-bottom: 20px;
@@ -234,8 +235,9 @@
 }
 
 
-/* ///////////////  BLOG PAGE  /////////////// */
+/* ///////////////  ACADEMICS PAGE  /////////////// */
 
-.blog-card-container{
-
+.AcademicsCardContainer{
+  font-family: "Work Sans",Arial, Helvetica, sans-serif;
+  margin: 0px 70px;
 }
