--- a/src/App.css
+++ b/src/App.css
@@ -42,11 +42,22 @@
   margin-right: 8px;
 }
 
+/* ADDITIONAL */
+@media (max-width: 768px) {
+  .header1 {
+    display: none;
+  }
+}
+
 /* Navbar */
 .custom-navbar-brand {
   font-family: 'Poppins', Arial, sans-serif;
   font-weight: bold;
 }
+
+
+
+
 
 /* Contact Us Page */
 .cards-container {
