--- a/src/App.css
+++ b/src/App.css
@@ -404,6 +404,24 @@
   color: #fff; /* Paragraph text color */
 }
 
+.media-body {
+  padding: 20px; 
+  margin: 0 auto; 
+  text-align: center;
+}
+
+
+
+
+
+@media (max-width: 768px) {
+  .ftco-services .no-gutters > .col-md-3 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
+
+
 
 /* //////////////////////// FOOTER ////////////////////// */
 
